[gd_scene load_steps=2 format=3 uid="uid://suwhuodhmku3"]

[ext_resource type="Script" uid="uid://v3iwqn0ffwss" path="res://Menus/Main/character_selection.gd" id="1_0q5at"]

[node name="CharacterSelection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0q5at")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -438.0
offset_top = -280.0
offset_right = 754.0
offset_bottom = 281.0
grow_horizontal = 2
grow_vertical = 2

[node name="CharacterContainer" type="HBoxContainer" parent="ScrollContainer"]
unique_name_in_owner = true
layout_direction = 2
layout_mode = 2
metadata/_edit_use_anchors_ = true

[node name="StartButton" type="Button" parent="."]
layout_mode = 0
offset_left = 1465.0
offset_top = 873.0
offset_right = 1636.0
offset_bottom = 959.0
text = "Start Game"

[node name="BackButton" type="Button" parent="."]
layout_mode = 0
anchor_left = 0.044791665
anchor_top = 0.053703703
anchor_right = 0.1625
anchor_bottom = 0.14444445
text = "Back"
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
